--- a/2048-Modifier/style/main.css
+++ b/2048-Modifier/style/main.css
@@ -25,6 +25,9 @@ input{
     padding: 3px 3px 3px 5px;
 	width: 300px;
 }
+    @media screen and (max-width: 520px) {
+      .input {
+        width:250px; } }
 h1.title {
   font-size: 80px;
   font-weight: bold;
